[workspace]
members = [
    "schemars",
    "schemars_derive"
]
resolver = "2"

[patch.crates-io]
serde = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
serde_derive = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
serde_derive_internals = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums" }
